<resources>
    <string name="app_name">pocketStudio</string>
    <string name="project_viewer">Project</string>
    <string name="stop">Stop</string>
    <string name="record">Record</string>
    <string name="play">Play</string>
    <string name="delete">Delete</string>
    <string name="recordToast">Recording...</string>
    <string name="title_activity_pocket_studio">Pocket Studio</string>
    <string name="project">My project</string>
    <string name="my_projects">My Projects</string>
    <string name="no_shared_projects">Once a project is shared with you,\n you\'ll see it listed here.</string>
    <string name="no_my_projects">Once you create a project,\n you\'ll see it listed here.</string>
    <string name="shared_with_me">Shared with me</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="track_2">Track 2</string>
    <string name="track_3">Track 3</string>
    <string name="track_4">Track 4</string>
    <string name="no_acct_create">No account yet? Create one</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="storage_title">Storage</string>
    <string name="storage_body">GB of unlimited</string>
    <string name="notifications_title">Notifications</string>
    <string name="notifications_body">Notification Settings</string>
    <string name="latecny_title">Latency</string>
    <string name="latency_body">Fix Latency</string>
    <string name="version">Version 0.1.6.13.a</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_notif_color">Notification color</string>

    <string name="pref_notif_content">When device is locked</string>
    <string-array name="pref_notif_content_titles">
        <item>Show all notification content</item>
        <item>Hide sensitive notification content</item>
        <item>Hide all notification content</item>
    </string-array>
    <string-array name="pref_notif_content_titles_long">
        <!--<item>Show all notification content including sensitive notification content</item>-->
        <item>Show all notification content including sensitive content</item>
        <!--<item>Show all notification content including content</item>-->
        <item>Hide sensitive notification content</item>
        <item>Hide all notification content</item>
    </string-array>
    <string-array name="pref_notif_content_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="pref_title_volume2">Notification volume</string>
    <string name="lipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed luctus tincidunt nisi nec finibus.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_profile">Save Profile</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="potato_potato">Potato Potato</string>
    <string name="view_profile">View Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="create_a_group">Create a group</string>
    <string name="group_name">Group Name</string>
    <string name="create_group">Create Group</string>
    <string name="edit">Edit</string>
    <string name="shared_projects">Shared Projects</string>
    <string name="group_members">Group Members</string>
    <string name="remove">Remove</string>
</resources>
