<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/storageLayoutBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            >

            <TextView
                android:id="@+id/storageTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/storage_title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/storageBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/storageTitle"
                android:layout_below="@+id/storageTitle"
                android:layout_marginTop="15dp"
                android:text="@string/storage_body" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notificationLayoutBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/storageLayoutBox"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/notificationsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notifications_title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/notificationsBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/notificationsTitle"
                android:layout_below="@+id/notificationsTitle"
                android:layout_marginTop="15dp"
                android:text="@string/notifications_body" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/latencyLayoutBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/notificationLayoutBox"
            android:layout_alignParentStart="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp">

            <TextView
                android:id="@+id/latency_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/latecny_title"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latency_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/latency_title"
                android:layout_below="@+id/latency_title"
                android:layout_marginTop="15dp"
                android:text="@string/latency_body" />

        </RelativeLayout>

        <TextView
            android:id="@+id/app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</LinearLayout>