<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nameText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:maxLines="1" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameText"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:ellipsize="end"
            android:ems="10"
            android:gravity="start|center_vertical"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1" />


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/saveProfileButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/save_profile" />

        <Button
            android:id="@+id/changePassButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/saveProfileButton"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:text="@string/change_password" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal">

        <Button
            android:id="@+id/deleteAccountButton"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="15dp"
            android:background="@color/recordColor"
            android:text="@string/delete_account"
            android:textColor="@color/bg_white" />
    </RelativeLayout>

</LinearLayout>